[MSC2-6] Downgrading an update transaction should retain its position in queue